bonus/confs/ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: argocd
    namespace: argocd
spec:
    ingressClassName: traefik
    rules:
        - host: argocd.localhost
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: argocd-server
                        port:
                            number: 80
